[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'pytest-sqlalchemy-session'
version = "0.3.4-beta1"
authors = [
    {name = "Stanislav Shkitin", email = "stanislav.shkitin@yandex.ru"},
]
license = {text = "MIT"}
description = "A pytest plugin for preserving test isolation that use SQLAlchemy."
keywords = ["pytest", "sqlalchemy", "transaction"]
readme = "README.md"

requires-python = ">=3.7"
classifiers=[
    'Development Status :: 4 - Beta',
    'Framework :: Pytest',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Testing',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/base.txt"]}

[tool.setuptools]
packages = ["pytest_sqlalchemy_session"]

[project.entry-points.pytest11]
pytest-sqlalchemy-session = "pytest_sqlalchemy_session.plugin"
